# testGithubActions

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  changelog.md.j2  pyproject.toml
.github/workflows/: tests.yml  version_bump.yaml
testGithubActions/: main.py
tests/: test_main.py
