[tool.poetry]
name = "testgithubactions"
version = "0.1.0"
description = ""
authors = ["KonstantinLosev <loskost@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.14"
pandas = [
    {version = ">=1.0.0, <1.4.0", python = "~3.7"},
    {version = "^1.4.0", python = "~3.8"},
    {version = "^2.0.0", python = ">=3.9, <3.14"},
]

[tool.poetry.group.dev.dependencies]
pytest = [
    {version = "<8.0.0", python = "~3.7"},
    {version = ">=8.0.0", python = ">=3.8, <3.14"},
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
